# parliamentary-discourse-knowledge-graph

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
data/: README.md
data/reference/legislature_15/: government_manual_mapping.csv
data/static/: roster_gov_l15.json
docs/: project_snapshot.md
src/: __init__.py  main.py
src/congreso_analisis/: __init__.py
src/congreso_analisis/config/: __init__.py  settings.py
src/congreso_analisis/enrichment/: __init__.py
src/congreso_analisis/graph/: __init__.py  builder.py
src/congreso_analisis/ingestion/: __init__.py
src/congreso_analisis/monitoring/: __init__.py
src/congreso_analisis/orchestration/: enrichment_agent.py  ingestion_agent.py  monitoring_agent.py  parsing_agent.py
src/congreso_analisis/parsing/: __init__.py
src/congreso_analisis/processing/: enrichment.py  filters.py  roles.py  speaker_detector.py  speaker_normalization.py  speaker_resolution.py  speaker_validation.py
src/congreso_analisis/silver/: enrich_legislature.py  interventions_extractor.py
src/congress_analysis/: backup_manager.py  parquet_comparator.py
tests/: __init__.py  conftest.py  test_backup_manager.py  test_extractor_state_machine.py  test_filters.py  test_high_precision_segmentation.py  test_parquet_comparator.py  test_roles.py  test_speaker_pipeline.py
tests/fixtures/: sample_session.html
tests/integration/: __init__.py
tests/unit/: test_agents.py  test_interventions_extractor.py  test_main_streaming.py  test_sessions_scraper.py  test_utils.py
(+30 files in other folders)
