[tool.poetry]
name = "parliamentary-discourse-knowledge-graph"
version = "0.1.0"
description = "NLP-driven knowledge graph analysis of parliamentary discourse from the Spanish Congress of Deputies."
authors = ["Jesus Melgar"]
license = "MIT"
readme = "README.md"
packages = [{include = "congreso_analisis", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.15.2"
requests = "^2.31.0"
pandas = "^2.1.3"
pyarrow = "^14.0.1"
duckdb = "^0.9.2"
neo4j = "^5.14.1"
pydantic = "^2.5.2"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.0"
types-requests = "^2.31.0.10"
pre-commit = "^4.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py311"
lint.select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_generics = true
no_implicit_optional = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=congreso_analisis --cov-report=term-missing"
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
